Reorganize some assignments

--- a/bootstrap-jquery/index.html
+++ b/bootstrap-jquery/index.html
@@ -6,42 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bootstrap and jQuery Assignment</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<style>
-  body {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  table th:nth-child(even),
-  table td:nth-child(even) {
-    border: 1px solid red;
-  }
-  table th:nth-child(odd),
-  table td:nth-child(odd) {
-    border: 1px solid blue;
-  }
-  .grid-x-wrapper {
-    border: 1px solid #888;
-    padding: 2rem;
-  }
-  .table-x .row > div {
-    padding: 1rem;
-    text-align: center;
-    border-radius: 2px;
-  }
-  .table-x p.x {
-    text-align: center;
-    font-size: 2rem;
-  }
-  .table-x .six {
-    border-right: none !important;
-  }
-  #colorChanger .btn {
-    width: 100%
-  }
-</style>
 <body>
 
   <div class="container-fluid">
@@ -375,24 +341,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script>
-    $( document ).ready(function() {
-      $("#colorChanger").on("click", function(e) {
-        if(e.target.tagName == "BUTTON") {
-          const className = $(e.target).attr("class").match(/btn-(\w*)/)[1];
-          $(".table-x .row > div")
-            .removeClass(function() {
-              return $(this).attr("class").match(/bg-\w*/) + " " + $(this).attr("class").match(/text-\w*/);
-            })
-            .addClass(() => className == "warning" ? `bg-${className} text-dark` : `bg-${className} text-white`);
-          $(".table-x .row p.x")
-            .removeClass(function() {
-              return $(this).attr("class").match(/text-\w*/);
-            })
-            .addClass(`text-${className}`);
-        }
-      });
-    });
-  </script>
+  <script src="custom.js"></script>
 </body>
 </html>
